tests/miniJava/neg/000098_mutation.MiniJava
class java { public extends static void Main ( String [ ] java ) { { } } }
